[Fix]: Overflow

--- a/Garage/Applications/Password Generator/scss/main.scss
+++ b/Garage/Applications/Password Generator/scss/main.scss
@@ -30,6 +30,7 @@
 
         overflow-x: scroll;
 
+        break-inside: avoid;
         word-break: keep-all;
 
         padding: 0 3rem;
